tiny navbar on mobile fix & lib cleanup

--- a/style/style.css
+++ b/style/style.css
@@ -405,7 +405,7 @@ nav {
     background-color: #1f2225;
     display: flex;
     justify-content: space-between;
-    height: 80px;
+    height: 50px;
     z-index: 1;
     width: 100%;
     max-width: 1300px;
